[gd_scene load_steps=2 format=3 uid="uid://rgcd5atxvvjx"]

[ext_resource type="Script" uid="uid://dm7fn7ygmam8j" path="res://scripts/game.gd" id="1_fqgil"]

[node name="Main" type="Node2D"]

[node name="Game" type="Node" parent="."]
script = ExtResource("1_fqgil")

[node name="GameTimer" type="Timer" parent="Game"]
wait_time = 2.0
one_shot = true
ignore_time_scale = true

[node name="PenaltyTimer" type="Timer" parent="Game"]
wait_time = 2.0
one_shot = true

[node name="ReadyTimer" type="Timer" parent="Game"]
one_shot = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="timeout" from="Game/GameTimer" to="Game" method="_on_game_timer_timeout"]
[connection signal="timeout" from="Game/PenaltyTimer" to="Game" method="_on_penalty_timer_timeout"]
[connection signal="timeout" from="Game/ReadyTimer" to="Game" method="_on_ready_timer_timeout"]
